[package]
name = "falling-tetromino-engine"
version = "1.0.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Lucas Werner"]
license = "MIT"
description = "A backend with ergonomic API for games where tetrominos fall and stack."
documentation = "https://docs.rs/falling-tetromino-engine"
# homepage = "https://...
repository = "https://github.com/Strophox/falling-tetromino-engine"
readme = "README.md"
keywords = ["blocks", "stacker", "API", "backend", "logic"]
categories = ["game-development", "game-engines"]
exclude = [".github/"]

[lib]
name = "falling_tetromino_engine"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
# Main, reproducible game PNRG.
rand_chacha = { version = "0.9.0", features = ["serde"] }
# Expose more PRNG helpers: "Choosing a thread_random() game seed if none is specified.""
rand = "0.9.2"

serde = { version = "1.0", features = ["derive"], optional = true }
