[package]
name = "falling-tetromino-engine"
version = "12.0.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Lucas Werner"]
license = "MIT"
description = "A tetromino stacker engine with goals of being featureful, efficient and elegant."
documentation = "https://docs.rs/falling-tetromino-engine"
# homepage = "https://...
repository = "https://github.com/Strophox/falling-tetromino-engine"
readme = "README.md"
keywords = ["blocks", "stacker", "API", "backend", "logic"]
categories = ["game-development", "game-engines"]
exclude = [".github/", "logo/", "RELEASE-CHECKLIST.md"]

[lib]
name = "falling_tetromino_engine"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
# Main, reproducible game PNRG.
rand_chacha = { version = "0.10.0", features = ["serde"] }
# Expose more PRNG helpers: "Choosing a thread_random() game seed if none is specified."
rand = "0.10.0"
either = { version = "1.15.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
crossterm = "0.29.0"
